// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`German language Empty input 1`] = `
Array [
  Object {
    "id": 10,
    "rating": 4,
    "title": "AA Batterien, Alkaline 12er Pack",
  },
  Object {
    "id": 20,
    "rating": 3,
    "title": "Lightning auf USB A Kabel",
  },
  Object {
    "id": 30,
    "rating": 2,
    "title": "Zahnbürste, mit 3D White, Weiß",
  },
  Object {
    "id": 40,
    "rating": 1,
    "title": "Hi-Fi-Mitteltöner, Speaker für die Mittelton-Wiedergabe",
  },
]
`;

exports[`German language Equality 1`] = `
Array [
  Object {
    "id": 20,
    "rating": 3,
    "title": "[Lightning] [auf] [USB] [A] [Kabel]",
  },
]
`;

exports[`German language Partiles 1`] = `
Array [
  Object {
    "id": 40,
    "rating": 1,
    "title": "Hi-Fi-Mitteltöner, Speaker für die [Mit]telton-Wiedergabe",
  },
  Object {
    "id": 30,
    "rating": 2,
    "title": "Zahnbürste, [mit] 3D White, Weiß",
  },
]
`;

exports[`German language Stemming 1`] = `
Array [
  Object {
    "id": 10,
    "rating": 4,
    "title": "[AA] [Batterie]n, Alkaline 12er Pack",
  },
]
`;
